Webstack/k8s/base/project-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-webstack
  labels:
    name: project-webstack
    env: development
