Webstack/k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: project-webstack
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-container
        image: lauwersb/bl-api:bfb321762c6fc93c2a3366cc12489b71ae267b25
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health  
            port: 8000
          initialDelaySeconds: 15 
          periodSeconds: 10    
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: project-webstack
  labels:
    app: api-service  
spec:
  selector:
    app: api
  ports:
    - name: http      
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
